# SampleWeatherReport

./: .gitignore  CMakeLists.txt  README.md  SampleWeatherReport.pro  addcitydialog.cpp  addcitydialog.h  addcitydialog.ui  curlrestrequester.cpp  curlrestrequester.h  irestrequester.h  iweatherreporter.h  locationweather.cpp  locationweather.h  main.cpp  openweathermapreporter.cpp  openweathermapreporter.h  restresponse.cpp  restresponse.h  weatherdetaildialog.cpp  weatherdetaildialog.h  weatherdetaildialog.ui  weatherreportwindow.cpp  weatherreportwindow.h  weatherreportwindow.ui  weatherwidgetitem.cpp  weatherwidgetitem.h  weatherwidgetitem.ui
google-tests/: CMakeLists.txt  GoogleTestMain.cpp  OpenWeatherReportTests.cpp  QPixmap  QPixmap.cpp  RestRequesterMock.h
tests/: CMakeLists.txt  maintest.cpp  openweatherreportertest.cpp  restrequestermock.cpp  restrequestermock.h
